{
    "name": "InputActions",
    "maps": [
        {
            "name": "Default",
            "id": "81154d25-c4f3-4094-bb4d-e77e9ac140d0",
            "actions": [
                {
                    "name": "Jump",
                    "type": "Button",
                    "id": "6d31ca45-4d70-4e25-a662-8d3cf714cfed",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                },
                {
                    "name": "Movement",
                    "type": "Value",
                    "id": "0c56d0b5-b548-440c-967c-f6fc752cf784",
                    "expectedControlType": "Vector2",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": true
                },
                {
                    "name": "Rotation",
                    "type": "Value",
                    "id": "0bcb400d-9d94-4095-a1ee-f246c1027833",
                    "expectedControlType": "Vector2",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": true
                },
                {
                    "name": "Running",
                    "type": "Button",
                    "id": "d7fe7650-23c1-42a2-bdc6-2108cca0a8b7",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                },
                {
                    "name": "ToggleView",
                    "type": "Button",
                    "id": "18343fa7-32ca-4ec9-a736-5fc7f4286871",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                },
                {
                    "name": "Interact",
                    "type": "Button",
                    "id": "f15b3bd1-45ec-42b7-af72-9db55d22c61a",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                },
                {
                    "name": "QuitMedia",
                    "type": "Button",
                    "id": "ecfe062c-2eeb-4793-b5eb-5e97b497f104",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                },
                {
                    "name": "ShuffleSelection",
                    "type": "Button",
                    "id": "34fd2834-ffb6-49c2-bc3c-84ff53b4d522",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                },
                {
                    "name": "OpenMenu",
                    "type": "Button",
                    "id": "bdd57604-7bca-47ce-9c51-6801b5518684",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                }
            ],
            "bindings": [
                {
                    "name": "",
                    "id": "d41d204e-ca52-4e05-9d1e-6ea2b2678653",
                    "path": "<Keyboard>/space",
                    "interactions": "",
                    "processors": "",
                    "groups": "KeyBoardAndMouse",
                    "action": "Jump",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "2D Vector",
                    "id": "ac73da01-2b98-470e-a595-69a9d40eba31",
                    "path": "2DVector(mode=1)",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Movement",
                    "isComposite": true,
                    "isPartOfComposite": false
                },
                {
                    "name": "up",
                    "id": "60c29ca1-e68c-4ee0-afef-ad4969085594",
                    "path": "<Keyboard>/w",
                    "interactions": "",
                    "processors": "",
                    "groups": "KeyBoardAndMouse",
                    "action": "Movement",
                    "isComposite": false,
                    "isPartOfComposite": true
                },
                {
                    "name": "down",
                    "id": "d3501436-9525-4eea-a64e-83716c174c94",
                    "path": "<Keyboard>/s",
                    "interactions": "",
                    "processors": "",
                    "groups": "KeyBoardAndMouse",
                    "action": "Movement",
                    "isComposite": false,
                    "isPartOfComposite": true
                },
                {
                    "name": "left",
                    "id": "396cc677-fe71-4361-bda7-5cfb97c2a53c",
                    "path": "<Keyboard>/a",
                    "interactions": "",
                    "processors": "",
                    "groups": "KeyBoardAndMouse",
                    "action": "Movement",
                    "isComposite": false,
                    "isPartOfComposite": true
                },
                {
                    "name": "right",
                    "id": "4f074c9b-6882-4e1b-addb-1a4f5d997261",
                    "path": "<Keyboard>/d",
                    "interactions": "",
                    "processors": "",
                    "groups": "KeyBoardAndMouse",
                    "action": "Movement",
                    "isComposite": false,
                    "isPartOfComposite": true
                },
                {
                    "name": "",
                    "id": "8e63b119-92f3-4b91-8514-0c9638a1b792",
                    "path": "<Mouse>/delta",
                    "interactions": "",
                    "processors": "",
                    "groups": "KeyBoardAndMouse",
                    "action": "Rotation",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "bceede53-0b3f-4ea7-ab33-3bcdf46f814b",
                    "path": "<Keyboard>/shift",
                    "interactions": "",
                    "processors": "",
                    "groups": "KeyBoardAndMouse",
                    "action": "Running",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "5568ed6e-b629-4fb0-a63d-2de5b0ab9178",
                    "path": "<Keyboard>/tab",
                    "interactions": "",
                    "processors": "",
                    "groups": "KeyBoardAndMouse",
                    "action": "ToggleView",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "686e8bac-6364-4410-85a6-d0bdba34bc37",
                    "path": "<Keyboard>/e",
                    "interactions": "",
                    "processors": "",
                    "groups": "KeyBoardAndMouse",
                    "action": "Interact",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "6c36503f-0169-4afa-8fb5-3e8e3c228244",
                    "path": "<Keyboard>/q",
                    "interactions": "",
                    "processors": "",
                    "groups": "KeyBoardAndMouse",
                    "action": "QuitMedia",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "ecee837f-a52c-4ec8-8c8f-2c85cb9a2a75",
                    "path": "<Keyboard>/q",
                    "interactions": "",
                    "processors": "",
                    "groups": "KeyBoardAndMouse",
                    "action": "ShuffleSelection",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "eb855d13-44c1-4f37-91aa-b58bacac77fb",
                    "path": "<Keyboard>/m",
                    "interactions": "",
                    "processors": "",
                    "groups": "KeyBoardAndMouse",
                    "action": "OpenMenu",
                    "isComposite": false,
                    "isPartOfComposite": false
                }
            ]
        }
    ],
    "controlSchemes": [
        {
            "name": "KeyBoardAndMouse",
            "bindingGroup": "KeyBoardAndMouse",
            "devices": [
                {
                    "devicePath": "<Keyboard>",
                    "isOptional": false,
                    "isOR": false
                },
                {
                    "devicePath": "<Mouse>",
                    "isOptional": false,
                    "isOR": false
                }
            ]
        },
        {
            "name": "VR",
            "bindingGroup": "VR",
            "devices": [
                {
                    "devicePath": "<XRController>",
                    "isOptional": false,
                    "isOR": false
                }
            ]
        }
    ]
}